# binfie_scripts

./: README.md
data_extraction/: extract_fasta.py  extract_genes.py  translate_nucleotide.py
format_conversion/: emboss_distmat_to_tsv.py  snp_table_to_alignment.py  subset_snp_table.py
incomplete/: ena_download.md
project_skeleton/cpp_autotools/: configure.ac
project_skeleton/cpp_autotools/include/: skeleton.h  skeleton_opts.h
project_skeleton/cpp_autotools/src/: Makefile.am  skeleton.cpp  skeleton_opts.cpp
project_skeleton/cpp_autotools/tests/: Makefile.am  test_skeleton.cpp
project_skeleton/python_cpp_extension/: setup.py
project_skeleton/python_cpp_extension/skeleton/: __main__.py
project_skeleton/python_cpp_extension/src/: bindings.cpp  utils.cpp  utils.h
project_skeleton/python_cpp_extension/tests/: test_invsqrt.py
project_skeleton/python_package/: setup.py  skeleton-runner.py
project_skeleton/python_package/skeleton/: __main__.py  arguments.py  (+1 more)
reference/: bash_commands.md  blast.md  bowtie2.md  genomic_resources.md  misc_utility.md  ncbi_eutils.md  ncbi_ftp.md  ncbi_taxonomy.md  slurm_sbatch.md
statistics/: assembly_n50.py  assembly_stats.py
summarisation/: centrifuge_species.py
unsorted/: argument_parsing.py  asyncio_basic.py  asyncio_requeue.py  blast.py  debugging_slow_processes.py  dependencies_check.py  plot_timeline_piecharts.R  render_assembly_graphs_and_stitch.txt  rscript_argument_parsing.md  scrape_imngs_lists.py  simulate_reads.py  urllib2_download.py
visualisation/: ggtree_scaling_and_log10p_transform.R  mlst_mst.R
(+1 files in other folders)
